--- a/modules/upgrade/pages/proxy-upgrade.adoc
+++ b/modules/upgrade/pages/proxy-upgrade.adoc
@@ -40,7 +40,11 @@ spacewalk-proxy stop
 
 . Select the packages to be updated on the proxy.
 
-. From the {productname} Server, where the Proxy is registered as a client, send the [command]``spacewalk-proxy start`` command.
+. On the {productname} Server where the proxy is registered as a client, start the proxy service:
++
+----
+spacewalk-proxy start
+----
 
 It is recommended to create an action chain of this command sequence.
 Then you can apply it to several proxies to update them in batches or all at the same time.
