--- a/modules/upgrade/pages/proxy-upgrade.adoc
+++ b/modules/upgrade/pages/proxy-upgrade.adoc
@@ -46,5 +46,5 @@ spacewalk-proxy stop
 spacewalk-proxy start
 ----
 
-It is recommended to create an action chain of this command sequence.
+If you need to update many proxies, you can create an action chain of this command sequence.
 Then you can apply it to several proxies to update them in batches or all at the same time.
