--- a/modules/upgrade/pages/proxy-upgrade.adoc
+++ b/modules/upgrade/pages/proxy-upgrade.adoc
@@ -47,4 +47,4 @@ spacewalk-proxy start
 ----
 
 If you need to update many proxies, you can create an action chain of this command sequence.
-Then you can apply it to several proxies to update them in batches or all at the same time.
+You can use the action chain to perform upgrades on multiple proxies at the same time.
