--- a/modules/upgrade/pages/proxy-upgrade.adoc
+++ b/modules/upgrade/pages/proxy-upgrade.adoc
@@ -17,7 +17,7 @@ Some updates will require a restart of the proxy service.
 
 
 
-== Prepare to Upgrade
+== Prepare to Update
 
 Before you perform any proxy upgrade, schedule a maintenance window.
 The clients registered to {productname} through the proxy will not be able to connect to {productname} while the upgrade is in progress.
