--- a/modules/administration/pages/image-management.adoc
+++ b/modules/administration/pages/image-management.adoc
@@ -14,7 +14,7 @@ The workflow looks like this:
 . Build the image
 . Push the image to the image store
 
-{productname} supports two distinct build types:
+{productname} supports two distinct build types: dockerfile, and the Kiwi image system.
 
 
 
