--- a/modules/upgrade/pages/proxy-migration.adoc
+++ b/modules/upgrade/pages/proxy-migration.adoc
@@ -30,8 +30,8 @@ The distribution must be based on {sle}{nbsp}15 SP1, because {productname}{nbsp}
 . Download an ISO image with the installation sources, and mount the ISO image on your server:
 +
 ----
-mkdir /mnt/sle15
-mount -o loop DVD1.iso /mnt/sle15
+mkdir /mnt/sle15sp1
+mount -o loop DVD1.iso /mnt/sle15sp1
 ----
 
 
