Chore: Dockerfile -> dockerfile

--- a/modules/administration/pages/image-management.adoc
+++ b/modules/administration/pages/image-management.adoc
@@ -33,7 +33,7 @@ image::image-building.png[scaledwidth=80%]
 The containers feature is available for Salt clients running {sls} 12 or later.
 Before you begin, ensure your environment meets these requirements:
 
-* A published git repository repository containing a Dockerfile and configuration scripts.
+* A published git repository repository containing a dockerfile and configuration scripts.
 The repository can be public or private, and should be hosted on GitHub, GitLab, or BitBucket.
 * A properly configured image store, such as a Docker registry.
 +
@@ -160,7 +160,7 @@ Only lowercase characters are permitted in container labels.
 If your container image tag is in a format such as `myproject/myimage`, make sure your image store registry URI contains the `/myproject` suffix.
 ====
 
-. Use a Dockerfile as the `Image Type`.
+. Use a dockerfile as the `Image Type`.
 
 . Use the drop-down menu to select your registry from the `Target Image Store` field.
 
@@ -223,7 +223,7 @@ https://gitlab-ci-token:<AUTHENTICATION_TOKEN>@gitlab.example.com/USER/project.g
 .Specifying a git branch
 ====
 If a branch is not specified, the `master` branch will be used by default.
-If a `folder` is not specified the image sources (Dockerfile sources) are expected to be in the root directory of the GitHub or GitLab checkout.
+If a `folder` is not specified the image sources (dockerfile sources) are expected to be in the root directory of the GitHub or GitLab checkout.
 ====
 
 . Select an `Activation Key`.
