--- a/modules/reference/pages/command-line-tools.adoc
+++ b/modules/reference/pages/command-line-tools.adoc
@@ -741,17 +741,13 @@ export URLGRABBER_DEBUG=DEBUG
 /usr/bin/spacewalk-repo-sync --channel <channel-label> --type yum
 ----
 
+To increase the debug level, add the [option]``-vvv`` option.
+
 When debugging is done, disable the debug mode:
 
 ----
 unset URLGRABBER_DEBUG
 ----
-
-
-
-=== Increase Debug Level
-
-Use [option]``-vvv``
 
 
 
