renaming to -update.adoc from modules/upgrade/pages/proxy-upgrade.adoc from modules/upgrade/pages/server-upgrade.adoc discussed in: https://github.com/SUSE/doc-susemanager/pull/740

--- a/modules/administration/pages/maintenance-window.adoc
+++ b/modules/administration/pages/maintenance-window.adoc
@@ -13,7 +13,7 @@ You will need to stop the spacewalk, SAP, and database services, along with any 
 . Check if the configuration is still correct.
 . On Salt systems, apply the highstate.
 . Apply the latest updates.
-See xref:upgrade:server-upgrade.adoc[].
+See xref:upgrade:server-update.adoc[].
 . Update to the latest service pack, if required.
 See xref:upgrade:migrate-4x-4x.adoc[].
 . Reboot the server.
