--- a/modules/upgrade/nav-upgrade-guide.adoc
+++ b/modules/upgrade/nav-upgrade-guide.adoc
@@ -2,10 +2,10 @@
 ifndef::backend-pdf[]
 
 * xref:upgrade-overview.adoc[Upgrade Guide]
-** xref:server-upgrade.adoc[Server Update]
+** xref:server-update.adoc[Server Update]
 ** xref:migrate-3x-4x.adoc[Migrating from Version 3.2 to 4.x]
 ** xref:migrate-4x-4x.adoc[Migrating from Version 4 to 4.x]
-** xref:proxy-upgrade.adoc[Proxy Update]
+** xref:proxy-update.adoc[Proxy Update]
 ** xref:proxy-migration.adoc[Proxy Upgrade 3.x to 4.x]
 ** xref:client-migration.adoc[Client Migration]
 ** xref:db-migration.adoc[Database Migration]
@@ -27,7 +27,7 @@ include::./branding/pdf/entities.adoc[]
 include::modules/upgrade/pages/upgrade-overview.adoc[leveloffset=+1]
 
 // Server Update
-include::modules/upgrade/pages/server-upgrade.adoc[leveloffset=+1]
+include::modules/upgrade/pages/server-update.adoc[leveloffset=+1]
 
 // Migration from Version 3x to 4x
 include::modules/upgrade/pages/migrate-3x-4x.adoc[leveloffset=+1]
@@ -36,7 +36,7 @@ include::modules/upgrade/pages/migrate-3x-4x.adoc[leveloffset=+1]
 include::modules/upgrade/pages/migrate-4x-4x.adoc[leveloffset=+1]
 
 // Proxy Update
-include::modules/upgrade/pages/proxy-upgrade.adoc[leveloffset=+1]
+include::modules/upgrade/pages/proxy-update.adoc[leveloffset=+1]
 
 // Proxy Migration
 include::modules/upgrade/pages/proxy-migration.adoc[leveloffset=+1]
