--- a/modules/upgrade/pages/proxy-migration.adoc
+++ b/modules/upgrade/pages/proxy-migration.adoc
@@ -41,7 +41,8 @@ mount -o loop DVD1.iso /mnt/sle15sp1
 . In the [guimenu]``Create Autoinstallable Distribution`` section, use these parameters:
 * In the [guimenu]``Distribution Label`` section, type a unique name for the distribution.
 Use only letters, numbers, hyphens (``-``), periods  (``.``), and underscores (``_``), and ensure the name is longer than four characters.
-* In the [guimenu]``Tree Path`` field, type an absolute path to the installation source. In this example, this would be ``/mnt/sle15sp1``
+* In the [guimenu]``Tree Path`` field, type an absolute path to the installation source.
+In this example, this would be [path]``/mnt/sle15sp1``.
 * In the [guimenu]``Base Channel`` field, select [systemitem]``SLE-Product-SUSE-Manager-Proxy-4.0-Pool for x86_64``.
 * In the [guimenu]``Installer Generation`` field, select [systemitem]``SUSE Linux Enterprise 15``.
 * In the [guimenu]``Kernel Options`` field, type any options to be passed to the kernel when booting for the installation.
