TR feedback by moio

--- a/modules/administration/pages/maintenance-window.adoc
+++ b/modules/administration/pages/maintenance-window.adoc
@@ -1,7 +1,12 @@
 [[maintenance-window]]
-= Maintenance Window Checklist
+= {productname} Server Maintenance Window
 
-If you work on a {productname} Server with scheduled maintenance windows, you might find it difficult to remember all the things that you need to during that critical downtime.
+If you work with scheduled maintenance windows, you might find it difficult to remember all the things that you need to do before, during, and after that critical downtime of the {productname} Server.
+{productname} Server related systems such as Inter-Server Synchronization Slave Servers or {productname} Proxies are also affected and have do be considered.
+
+
+
+== {productname} Server
 
 As with any {sle} system, you are encouraged to install package updates on the {susemgr} Server when they arrive.
 
@@ -86,3 +91,15 @@ zypper migration
 ----
 
 This procedure is also known as a Service Pack (SP) migration.
+
+
+
+== Inter-Server Synchronization Slave Server
+
+Second point is to add a section about Inter-Server Sync Slaves, which should be updated as soon as the update to the main (Master) Server is completed.
+
+
+
+== {productname} Proxy
+
+Third point is to add a section about Proxies, which should be updated after all Servers updates are complete.
