--- a/modules/administration/pages/maintenance-window.adoc
+++ b/modules/administration/pages/maintenance-window.adoc
@@ -96,10 +96,11 @@ This procedure is also known as a Service Pack (SP) migration.
 
 == Inter-Server Synchronization Slave Server
 
-Second point is to add a section about Inter-Server Sync Slaves, which should be updated as soon as the update to the main (Master) Server is completed.
+Inter-server synchronization slave servers should be updated as soon as
+the update of the main server (master server) is completed.
 
 
 
 == {productname} Proxy
 
-Third point is to add a section about Proxies, which should be updated after all Servers updates are complete.
+Proxies should be updated after all Server updates are complete.
