--- a/modules/installation/pages/network-requirements.adoc
+++ b/modules/installation/pages/network-requirements.adoc
@@ -4,7 +4,7 @@
 This section details the networking and port requirements for {productname}.
 
 Fully Qualified Domain Name (FQDN)::
-The {productname} server must resolve its FQDN correctly or cookies will not work properly on the WebUI.
+The {productname} server must resolve its FQDN correctly. This is a hard requirement else various components might malfunction.
 +
 For more information about configuring the hostname and DNS, see link:https://www.suse.com/documentation/sles-15/book_sle_admin/data/sec_network_yast.html#sec_network_yast_change_host
 
