--- a/modules/installation/pages/install-server-unified.adoc
+++ b/modules/installation/pages/install-server-unified.adoc
@@ -50,7 +50,7 @@ Only use add-ons that you absolutely require, such as driver repositories from y
 [NOTE]
 ====
 The default {productname} server installation does not enable a
-graphical desktop environment.  If you want to run setup tools such
+graphical desktop environment.  If you want to run setup tools such as
 {yast} with a graphical interface local on the {productname} server,
 click [guimenu]``Software`` and select the [guimenu]``X Window System``
 pattern.
