--- a/modules/installation/pages/server-setup.adoc
+++ b/modules/installation/pages/server-setup.adoc
@@ -73,7 +73,7 @@ You will see the address of the {productname} {webui}.
 
 == Creating the Main Administration Account
 
-This section will walk you through creating your organizations main administration account for {productname}.
+This section will walk you through creating your organization's main administration account for {productname}.
 
 [WARNING]
 .Admin and User Accounts
@@ -166,7 +166,6 @@ GRUB_CMDLINE_LINUX_DEFAULT="resume=/dev/sda1 splash=silent quiet showopts elevat
 ----
 
 To write the new configuration run [command]``grub2-mkconfig -o /boot/grub2/grub.cfg``.
-To update the grub2 during boot run [command]``grub2-install /dev/sda``.
 ====
 
 Monitor the channel synchronization process in real-time by viewing channel log files located in the directory [path]``/var/log/rhn/reposync``:
