updates per feedback

--- a/modules/retail/pages/retail-terminal-names.adoc
+++ b/modules/retail/pages/retail-terminal-names.adoc
@@ -59,12 +59,12 @@ B002.terminal.example.com-c643
 ----
 
 
-The branch ID is the unique identifier for the branch server that the terminal is connected to.
+The [systemitem]``BranchID`` is the unique identifier for the branch server that the terminal is connected to.
 You can configure this value in the PXE formula settings for the branch server.
 
-The FQDN is the fully-qualified domain name of the terminal.
+The [systemitem]``FQDN`` is the fully-qualified domain name of the terminal.
 
-The unique ID is the first four characters of a generated machine identification number.
+The [systemitem]``UniqueID`` is the first four characters of a generated machine identification number.
 You can disable this behavior by toggling the [systemitem]``DISABLE_UNIQUE_SUFFIX`` parameter in the PXE formula settings.
 
 For more information about the PXE formula, see xref:salt:formula-pxe.adoc[].
@@ -101,11 +101,11 @@ For more information on the bind formula, see xref:salt:formula-bind.adoc[].
 . In the [guimenu]``IP Address`` field, type the static IP address you assigned to the terminal in the DHCP formula settings.
 . OPTIONAL: For multiple terminals, click btn:[Add Item] and fill in the details for each terminal.
 . Click btn:[Save Formula] to save the changes.
-. Apply the highstate on the branch server to apply the changes, and update the terminal with the new hostname.
+. Apply the highstate on the branch server to apply the changes.
 
 [[IMPORTANT]]
 ====
-If the terminal was previously registered using a name based on the hardware type instead of the hostname, you will need to delete the original registration.
+If the terminal was previously registered using a name based on the hardware type instead of the hostname, you will need to delete the previous registration.
 When you re-register the terminal, use the new terminal name.
 ====
 
@@ -133,11 +133,11 @@ $hostname:
 ----
 retail_yaml --from-yaml retail.yaml
 ----
-. Apply the highstate on the branch server to apply the changes, and update the terminal with the new hostname.
+. Apply the highstate on the branch server to apply the changes.
 
 [[IMPORTANT]]
 ====
-If the terminal was previously registered using a name based on the hardware type instead of the hostname, you will need to delete the original registration.
+If the terminal was previously registered using a name based on the hardware type instead of the hostname, you will need to delete the previous registration.
 When you re-register the terminal, use the new terminal name.
 ====
 
