--- a/modules/administration/pages/tshoot-osadjabberd.adoc
+++ b/modules/administration/pages/tshoot-osadjabberd.adoc
@@ -23,7 +23,7 @@ If more detailed instructions are required, put them in a "Resolving" procedure:
 
 == Open File Count Exceeded
 
-If you receive an ``open file count exceeded`` error, it could be because the maximum number of files that jabber can open is lower than the number of connected OSAD clients.
+In some cases, the maximum number of files that jabber can open is lower than the number of connected OSAD clients.
 
 If this occurs, OSAD clients cannot contact the SUSE Manager Server, and jabberd will take an excessive amount of time to respond on port 5222.
 
