new section & diagrams

--- a/modules/retail/nav-retail.adoc
+++ b/modules/retail/nav-retail.adoc
@@ -3,6 +3,7 @@ ifndef::backend-pdf[]
 
 * xref:retail-introduction.adoc[Retail Guide]
 ** xref:retail-components.adoc[Components]
+** xref:retail-network-arch.adoc[Network Architecture]
 // Installation
 ** xref:retail-install.adoc[Installing]
 *** xref:retail-requirements.adoc[Requirements]
@@ -51,6 +52,8 @@ include::./branding/pdf/entities.adoc[]
 include::modules/retail/pages/retail-introduction.adoc[leveloffset=+1]
 
 include::modules/retail/pages/retail-components.adoc[leveloffset=+2]
+
+include::modules/retail/pages/retail-network-arch.adoc[leveloffset=+2]
 
 // Installation
 include::modules/retail/pages/retail-install.adoc[leveloffset=+2]
