--- a/modules/retail/pages/retail-components.adoc
+++ b/modules/retail/pages/retail-components.adoc
@@ -1,13 +1,8 @@
 [[retail-components]]
 = Components
 
-{smr} uses a layered architecture:
-
-* The first layer contains the {susemgr} server and one or more build hosts.
-* The second layer contains one or more branch servers to provide local network and boot services.
-* The final layer contains any number of deployed point-of-service terminals.
-
-image::retail_ref_arch.png[scaledwidth=80%]
+{smr} is made up of various components.
+For more on these components work together, see xref:modules/retail/pages/retail-network-arch.adoc[].
 
 
 
@@ -33,19 +28,8 @@ Build hosts should be based on {sls}{nbsp}12 SP3 or SP4.
 == Branch Server
 
 Branch servers should be physically located close to point-of-service terminals, such as in an individual store or branch office.
-We recommend you have a fast network connection between the branch server and its terminals.
 Branch servers provide services for PXE boot, and act as an image cache, Salt broker, and proxy for software components (RPM packages).
 The branch server can also manage local networking, and provide DHCP and DNS services.
-
-The branch server can operate in several different network configurations:
-
-* The branch server has a dedicated network interface card and terminals use an isolated internal branch network.
-  In this configuration, the branch server manages the internal network and provides DHCP, DNS, PXE, FTP, and TFTP services.
-* The branch server shares a network with the terminals, and provides a connection to the {susemgr} server.
-  In this configuration, the branch server is not required to manage a network (DHCP and DNS services), but acts as a PXE boot server and provides FTP and TFTP services.
-
-{smr} Branch servers are implemented as enhanced {susemgr} Proxy servers.
-For technical background information on {smr} Branch servers, see also the documentation on {susemgr} Proxy servers (xref:installation/install-proxy-unified.adoc[]).
 
 
 
