--- a/modules/reference/pages/command-line-tools.adoc
+++ b/modules/reference/pages/command-line-tools.adoc
@@ -696,7 +696,7 @@ Show help message and exit.
 
 
 [[spacewalk-repo-sync]]
-== Synchronize Software Repositories into {productname} Channels (spacewalk-repo-sync)
+== Synchronize Repositories  with spacewalk-repo-sync
 
 [command]``spacewalk-repo-sync`` is an important tool on {productname}, which works most of the time in the background.
 With [command]``spacewalk-repo-sync`` you synchronize software repositories into {productname} channels.
