--- a/modules/reference/pages/command-line-tools.adoc
+++ b/modules/reference/pages/command-line-tools.adoc
@@ -699,7 +699,7 @@ Show help message and exit.
 == Synchronize Repositories  with spacewalk-repo-sync
 
 [command]``spacewalk-repo-sync`` is an important tool on {productname}, which works most of the time in the background.
-With [command]``spacewalk-repo-sync`` you synchronize software repositories into {productname} channels.
+This usually happens automatically, but you can run it manually if required.
 
 But for debugging or solving smaller issues it is useful to run it directly with special parameters.
 
