--- a/modules/reference/pages/command-line-tools.adoc
+++ b/modules/reference/pages/command-line-tools.adoc
@@ -698,7 +698,7 @@ Show help message and exit.
 [[spacewalk-repo-sync]]
 == Synchronize Repositories  with spacewalk-repo-sync
 
-[command]``spacewalk-repo-sync`` is an important tool on {productname}, which works most of the time in the background.
+The [command]``spacewalk-repo-sync`` tool synchronizes software repositories into {productname} channels.
 This usually happens automatically, but you can run it manually if required.
 But for debugging or solving smaller issues it is useful to run it directly with special parameters.
 
