--- a/modules/reference/pages/command-line-tools.adoc
+++ b/modules/reference/pages/command-line-tools.adoc
@@ -700,7 +700,7 @@ Show help message and exit.
 
 The [command]``spacewalk-repo-sync`` tool synchronizes software repositories into {productname} channels.
 This usually happens automatically, but you can run it manually if required.
-But for debugging or solving smaller issues it is useful to run it directly with special parameters.
+This can be useful for debugging or for solving some synchronization problems.
 
 
 
