--- a/modules/reference/pages/command-line-tools.adoc
+++ b/modules/reference/pages/command-line-tools.adoc
@@ -717,7 +717,8 @@ Synchronize a single channel ``<custom-channel>`` to all repositories assigned t
 
 === Solve Checksum Problems
 
-Use the [option]``--deep-verify`` option to ignore cached package checksums, and thus solving checksum problems.
+Use the [option]``--deep-verify`` option to ignore cached package checksums.
+This can help with solving checksum problems.
 
 
 
