--- a/modules/reference/pages/command-line-tools.adoc
+++ b/modules/reference/pages/command-line-tools.adoc
@@ -727,7 +727,7 @@ This can help with solving checksum problems.
 Use the [option]``--force-all-errata`` to force re-importing all the patches (errata).
 To speed it up you can combine it with the [option]``--no-packages`` option.
 
-To find the root cause of synchronization problems it often helps to view the HTTP log when command]``spacewalk-repo-sync`` is running.
+To find the root cause of synchronization problems you can look at the HTTP log as [command]``spacewalk-repo-sync`` is running.
 
 . Set and export the [systemitem]``URLGRABBER_DEBUG``:
 +
