--- a/modules/reference/pages/command-line-tools.adoc
+++ b/modules/reference/pages/command-line-tools.adoc
@@ -743,7 +743,7 @@ export URLGRABBER_DEBUG=DEBUG
 
 To increase the debug level, add the [option]``-vvv`` option.
 
-When debugging is done, disable the debug mode:
+When debugging is finished, disable debug mode:
 
 ----
 unset URLGRABBER_DEBUG
