--- a/modules/reference/pages/command-line-tools.adoc
+++ b/modules/reference/pages/command-line-tools.adoc
@@ -734,7 +734,7 @@ To find the root cause of synchronization problems you can look at the HTTP log 
 ----
 export URLGRABBER_DEBUG=DEBUG
 ----
-. Run the synchronization command:
+. Start the synchronization:
 +
 
 ----
