--- a/modules/reference/pages/command-line-tools.adoc
+++ b/modules/reference/pages/command-line-tools.adoc
@@ -753,7 +753,11 @@ unset URLGRABBER_DEBUG
 
 === For More Information
 
-For a complete list of command line option, see the [command]``spacewalk-repo-sync`` manpage ([command]``man spacewalk-repo-sync``).
+For a complete list of command line options, see the [command]``spacewalk-repo-sync`` manpage:
+
+ ----
+ man spacewalk-repo-sync
+ ----
 
 
 
