--- a/modules/reference/pages/command-line-tools.adoc
+++ b/modules/reference/pages/command-line-tools.adoc
@@ -725,7 +725,8 @@ This can help with solving checksum problems.
 === Force Re-import Patches (Errata)
 
 Use the [option]``--force-all-errata`` to force re-importing all the patches (errata).
-To speed it up you can combine it with the [option]``--no-packages`` option.
+To make this command run faster, you can use the [option]``--no-packages`` option.
+This option excludes packages from the operation. 
 
 To find the root cause of synchronization problems you can look at the HTTP log as [command]``spacewalk-repo-sync`` is running.
 
