--- a/modules/upgrade/pages/server-update.adoc
+++ b/modules/upgrade/pages/server-update.adoc
@@ -1,8 +1,8 @@
 [[update.suse.manager]]
-= Package Updates
+= {productname} Server Update
 
-Before you perform any upgrade, it is important to ensure you have the latest versions of all installed packages.
-This will make your upgrade go much more smoothly.
+Before you perform any update, it is important to ensure you have the latest versions of all installed packages.
+Then you will upgrade the database schema.
 
 .Procedure: Updating the {productname} Server
 
@@ -25,7 +25,7 @@ zypper patch
 
 .Procedure: Updating the Database Schema
 
-If a patch includes a new database schema update, you will need to use the [command]``spacewalk-schema-update`` command.
+If a patch includes a new database schema update, you will need to use the [command]``spacewalk-schema-upgrade`` command.
 
 . On the {productname} Server, at the command prompt, as root, ensure the database service is running:
 +
