--- a/modules/upgrade/pages/proxy-update.adoc
+++ b/modules/upgrade/pages/proxy-update.adoc
@@ -19,7 +19,7 @@ Some updates will require a restart of the proxy service.
 
 == Prepare to Update
 
-Before you perform any proxy upgrade, schedule a maintenance window.
+Before you perform any proxy update, schedule a maintenance window.
 The clients registered to {productname} through the proxy will not be able to connect to {productname} while the upgrade is in progress.
 For more information about maintenance windows, see xref:administration/maintenance-window.adoc[].
 
@@ -47,4 +47,4 @@ spacewalk-proxy start
 ----
 
 If you need to update many proxies, you can create an action chain of this command sequence.
-You can use the action chain to perform upgrades on multiple proxies at the same time.
+You can use the action chain to perform updates on multiple proxies at the same time.
