--- a/modules/installation/pages/install-ibmz.adoc
+++ b/modules/installation/pages/install-ibmz.adoc
@@ -90,7 +90,7 @@ The hostname should contain less than eight characters and must not contain any
 
 This section covers the installation of {productname}{nbsp}{productnumber} as an extension to {sls}{nbsp}{sles-version}{nbsp}{sp-version}.
 
-TBD: Is this correct? SUSE Manager as an extension? Doesn't SLES15SP1 on z also have the new module concept with SUSE Manager being a base product?
+// TBD: Is this correct? SUSE Manager as an extension? Doesn't SLES15SP1 on z also have the new module concept with SUSE Manager being a base product?
 
 For more information on deploying SLES {sles-version}{nbsp}{sp-version} on your hardware, see https://www.suse.com/documentation/sles-15/book_sle_deployment/data/cha_zseries.html.
 
