Add new entitites for PDF files

--- a/branding/pdf/entities.adoc
+++ b/branding/pdf/entities.adoc
@@ -7,7 +7,9 @@
 :ipf : Itanium
 :x86: x86
 :x86_64: x86_64
+:centos: CentOS
 :rhel: Red Hat Enterprise Linux
+:rhela: RHEL
 :rhnminrelease6: Red Hat Enterprise Linux Server 6
 :rhnminrelease7: Red Hat Enterprise Linux Server 7
 :ubuntu: Ubuntu
@@ -31,6 +33,8 @@
 :scc: SUSE Customer Center
 :sls: SUSE Linux Enterprise Server
 :sle: SUSE Linux Enterprise
+:sleses: SUSE Linux Enterprise Server with Expanded Support
+:slesesa: Expanded Support
 :slsa: SLES
 :suse: SUSE
 :slea: SLE
