--- a/modules/installation/pages/proxy-registration.adoc
+++ b/modules/installation/pages/proxy-registration.adoc
@@ -10,7 +10,7 @@ This procedure describes software channel setup and registering the installed {p
 [IMPORTANT]
 .Downloading Channels
 ====
-Before you can select the correct child channels while creating the activation key, ensure you have completely downloaded the {productname} Proxy 4 channel and all the recommended and mandatory {sle} 15 channels.
+Before you can select the correct child channels while creating the activation key, ensure you have completely downloaded the {productname} Proxy 4 channel and all the recommended and mandatory {sle} 15 SP1 channels.
 ====
 
 [[proxy-register-procedure]]
