per feedback, just spacewalk services

--- a/modules/administration/pages/maintenance-window.adoc
+++ b/modules/administration/pages/maintenance-window.adoc
@@ -16,8 +16,8 @@ You must keep it up-to-date or you will risk not being able to update something 
 This section contains a checklist for your maintenance window, with links to further information on performing each of the steps, if you need it.
 
 
-. Stop services.
-You will need to stop the spacewalk, SAP, and database services, along with any others you have running.
+. Stop spacewalk services.
+// You will need to stop the spacewalk, SAP, and database services, along with any others you have running.
 . Check if the configuration is still correct.
 . On Salt systems, apply the highstate.
 . Apply the latest updates.
