--- a/modules/upgrade/pages/proxy-upgrade.adoc
+++ b/modules/upgrade/pages/proxy-upgrade.adoc
@@ -20,7 +20,7 @@ MU updates require a restart of the proxy service.
 == Prepare to Update
 
 Before you perform any proxy update, schedule a maintenance window.
-The clients registered to {productname} through the proxy will not be able to connect to {productname} while the upgrade is in progress.
+The clients registered to {productname} through the proxy will not be able to connect to {productname} while the update is in progress.
 For more information about maintenance windows, see xref:administration/maintenance-window.adoc[].
 
 
