some minor build errors

--- a/modules/installation/pages/pubcloud-setup.adoc
+++ b/modules/installation/pages/pubcloud-setup.adoc
@@ -40,7 +40,7 @@ For {productname} Server on a public cloud, the expected modules are:
 
 
 
-=== Account Credentials
+== Account Credentials
 
 An administrator account is created by default.
 The username and password varies depending on your provider.
