--- a/modules/upgrade/pages/client-migration.adoc
+++ b/modules/upgrade/pages/client-migration.adoc
@@ -135,7 +135,7 @@ Before you begin the migration, make sure that the migration target channels are
 For the upgrade to {sle}{nbsp}12 SP4, at least the [systemitem]``SLES12-SP4-Pool`` base channel with the [systemitem]``SLE-Manager-Tools12-Pool`` child channel for your architecture is required.
 The matching update channels such as [systemitem]``SLE-Manager-Tools12-Updates`` and [systemitem]``SLES12-SP4-Updates`` are recommended.
 
-// TODO: Check this:
+TODO: Check this:
 You can monitor the mirroring progress in [path]``/var/log/rhn/reposync/sles15-pool-x86_64.log``.
 
 
