--- a/modules/retail/pages/retail-terminal-names.adoc
+++ b/modules/retail/pages/retail-terminal-names.adoc
@@ -103,7 +103,7 @@ For more information on the bind formula, see xref:salt:formula-bind.adoc[].
 . Click btn:[Save Formula] to save the changes.
 . Apply the highstate on the branch server to apply the changes.
 
-[[IMPORTANT]]
+[IMPORTANT]
 ====
 If the terminal was previously registered using a name based on the hardware type instead of the hostname, you will need to delete the previous registration.
 When you re-register the terminal, use the new terminal name.
@@ -135,7 +135,7 @@ retail_yaml --from-yaml retail.yaml
 ----
 . Apply the highstate on the branch server to apply the changes.
 
-[[IMPORTANT]]
+[IMPORTANT]
 ====
 If the terminal was previously registered using a name based on the hardware type instead of the hostname, you will need to delete the previous registration.
 When you re-register the terminal, use the new terminal name.
