edits to centos file

--- a/modules/client-configuration/pages/clients-centos.adoc
+++ b/modules/client-configuration/pages/clients-centos.adoc
@@ -3,23 +3,30 @@
 
 This section contains information about registering traditional and Salt clients running {centos} operating systems.
 
-[WARNING]
+[IMPORTANT]
 ====
-{centos} Clients are completely based on {centos} and unrelated to {sleses} Clients (also known as RES or {redhat} {slesesa})
-You are responsible for arranging access to {centos} base media repositories and {centos} installation media, as well as connecting {productname} Server to {centos} Content Delivery Network
+{centos} clients are based on {centos} and are unrelated to {sleses}, RES, {redhat}, or {slesesa}.
+You are responsible for arranging access to {centos} base media repositories and {centos} installation media, as well as connecting {productname} Server to the {centos} content delivery network.
+====
+
 ifeval::[{suma-content} == true]
-{suse} does not provide support for {centos} operating system.
-Currently {productname} allows managing {centos} but support is not provided.
-endif::[]
+
+[IMPORTANT]
+====
+{suse} does not provide support for {centos} operating systems.
+{productname} allows you to manage {centos} clients, but support is not provided.
 ====
 
-== Server requirements
+endif::[]
 
-Ensure that your {productname} Server meets the requirements outlined at xref:installation:hardware-requirements.adoc[].
 
-Taskomatic will use one CPU core, and requires at least 3072{nbsp}MB RAM.
 
-To ensure that Taskomatic has access to enough memory, open the [path]``/etc/rhn/rhn.conf`` configuration file, add this line:
+== Server Requirements
+
+Before you begin, check that your {productname} Server meets the requirements at xref:installation:hardware-requirements.adoc[].
+
+Taskomatic uses one CPU core, and requires at least 3072{nbsp}MB of RAM.
+To ensure that taskomatic has access to enough memory, open the [path]``/etc/rhn/rhn.conf`` configuration file, and add this line:
 
 ----
 taskomatic.java.maxmemory=3072
@@ -30,63 +37,88 @@ Restart Taskomatic:
 systemctl restart taskomatic
 ----
 
-== {centos} Channel and Repository Management
 
-.Procedure: Add the Channels and Repositories
 
-The [package]``spacewalk-utils`` package contains a number of command line tools required for client administration, including [command]``spacewalk-common-channels`` tool.
+== Channel and Repository Management
+
+The [package]``spacewalk-utils`` package contains a number of command line tools required for client administration, including the [command]``spacewalk-common-channels`` tool.
+
 
 ifeval::[{suma-content} == true]
-[WARNING]
+
+[IMPORTANT]
 ====
-Keep in mind {suse} only provides support for [command]``spacewalk-clone-by-date`` and [command]``spacewalk-manage-channel-lifecycle`` tools.
+{suse} only provides support for [command]``spacewalk-clone-by-date`` and [command]``spacewalk-manage-channel-lifecycle`` tools.
 ====
+
 endif::[]
 
-At the command prompt on the {productname} Server, as root, install the [package]``spacewalk-utils`` package:
 
+
+.Procedure: Adding Channels and Repositories
+. At the command prompt on the {productname} Server, as root, install the [package]``spacewalk-utils`` package:
++
 ----
 zypper in spacewalk-utils
 ----
 
 // Because of the way mgr-create-bootstrap-repo works and because we don't have CentOS products at SCC, SUSE Manager users MUST use the same procedure as at Uyuni
 // They CANNOT use RES Client Tools.
-
-Add the {centos} base, updates, and client channels using the [command]``spacewalk-common-channels`` script (adapt to your CentOS version and architecture):
+. Add the {centos} base, updates, and client channels, specifying the {centos} version and architecture:
++
 ----
-spacewalk-common-channels -a x86_64 centos7 centos7-uyuni-client centos7-uyuni-client
+spacewalk-common-channels -a x86_64 centos7 \
+centos7-uyuni-client centos7-uyuni-client
 ----
 
-[IMPORTANT]
+[NOTE]
 ====
-The Client Tools that [command]``spacewalk-common-channels`` adds come from {uyuni} and not from {suse}
+The client tools channel provided by [command]``spacewalk-common-channels`` is sourced from {uyuni} and not from {suse}.
 ====
 
-.Procedure: Syncronize {centos} repositories
 
-In the {productname} {webui}, navigate to menu:Main Menu[Software > Manage], and for each {centos} channel, ckick on it.
 
+.Procedure: Synchronizing {centos} repositories
+
+. In the {productname} {webui}, navigate to menu:Software[Manage], and check every {centos} channel.
 . In the [guimenu]``Repositories`` tab, navigate to the [guimenu]``Sync`` subtab, and click btn:[Sync Now].
 You can also create a regular synchronization schedule on this page.
 
-== Create an activation key
 
-You will also need an activation key associated with the {centos} channels (6 or 7) created on the previous setp
+
+== Create an Activation Key
+
+You will need to create an activation key that is associated with your {centos} channels.
 
 For more information on activation keys, see xref:client-configuration:clients-and-activation-keys.adoc[].
 
+
+
 ifeval::[{uyuni-content} == true]
-== Trust GPG keys at the clients
 
-The GPG key for Uyuni CentOS Client Tools is not trusted by default by CentOS.
+== Trust GPG Keys on Clients
 
-The systems will bootstrap without the GPG key being trusted, but will not be able to install new client tool packages or updated them.
+By default, {centos} does not trust the GPG key for {productname} {centos} client tools.
 
-This can be fixed by adding the key ``uyuni-gpg-pubkey-0d20833e.key`` to all the CentOS bootscrap scripts at variable ``ORG_GPG_KEY=``. If you already have other keys there, you can keep them.
+The clients can be successfully bootstrapped without the GPG key being trusted.
+However, they will not be able to install new client tool packages or update them.
 
-For systems bootstrapped from WebUI, a salt state should be created to trust the key, then the state can be assigned to the organization, and finally it can be used using an Activation Key and the Configuration Channels to deploy the change to the clients.
+If this occurs, add this key to the [systemitem]``ORG_GPG_KEY=`` parameter in all {centos} bootstrap scripts:
+----
+uyuni-gpg-pubkey-0d20833e.key
+----
+
+ You do not need to delete any previously stored keys.
+
+If you are boostrapping clients from the {productname} {webui}, you will need to use a salt state to trust the key.
+Create the salt state and assign it to the organization.
+You can then use an activation key and configuration channels to deploy the key to the clients.
+
 endif::[]
 
-== Register {centos} Clients
 
-When you are ready to register your {centos} client, follow the instructions in xref:client-configuration:registration-overview.adoc[].
+
+== Register Clients
+
+{centos} clients are registered in the same way as all other clients.
+For more information, see xref:client-configuration:registration-overview.adoc[].
