--- a/modules/reference/pages/command-line-tools.adoc
+++ b/modules/reference/pages/command-line-tools.adoc
@@ -722,7 +722,7 @@ This can help with solving checksum problems.
 
 
 
-=== Force Re-import Patches (Errata)
+=== Force Re-import Patches
 
 Use the [option]``--force-all-errata`` to force re-importing all the patches (errata).
 To make this command run faster, you can use the [option]``--no-packages`` option.
