--- a/modules/reference/pages/command-line-tools.adoc
+++ b/modules/reference/pages/command-line-tools.adoc
@@ -724,7 +724,7 @@ This can help with solving checksum problems.
 
 === Force Re-import Patches
 
-Use the [option]``--force-all-errata`` to force re-importing all the patches (errata).
+Use the [option]``--force-all-errata`` option to force re-importing all the patches.
 To make this command run faster, you can use the [option]``--no-packages`` option.
 This option excludes packages from the operation. 
 
