--- a/modules/client-configuration/pages/clients-sleses.adoc
+++ b/modules/client-configuration/pages/clients-sleses.adoc
@@ -8,7 +8,7 @@ This section contains information about registering traditional and Salt clients
 [WARNING]
 ====
 {slesesa} clients are also called sometimes SLESES, RES or {redhat} {slesesa})
-For {rhel} based clients tou are responsible for arranging access to {rhela} or {centos} base media repositories installation media.
+For {rhel} based clients you are responsible for arranging access to {rhela} or {centos} base media repository installation media.
 ifeval::[{suma-content} == true]
 You must obtain support from {suse} for all your {slesesa} systems.
 endif::[]
