--- a/modules/client-configuration/pages/clients-sleses.adoc
+++ b/modules/client-configuration/pages/clients-sleses.adoc
@@ -17,7 +17,7 @@ ifeval::[{uyuni-content} == true]
 endif::[]
 ====
 
-== Server requirements
+== Server Requirements
 
 Ensure that your {productname} Server meets the requirements outlined at xref:installation:hardware-requirements.adoc[].
 
