--- a/modules/client-configuration/pages/clients-sleses.adoc
+++ b/modules/client-configuration/pages/clients-sleses.adoc
@@ -19,7 +19,7 @@ endif::[]
 
 == Server Requirements
 
-Ensure that your {productname} Server meets the requirements outlined at xref:installation:hardware-requirements.adoc[].
+Before you begin, check that your {productname} Server meets the requirements at xref:installation:hardware-requirements.adoc[].
 
 Taskomatic will use one CPU core, and requires at least 3072{nbsp}MB RAM.
 
