--- a/modules/client-configuration/pages/clients-sleses.adoc
+++ b/modules/client-configuration/pages/clients-sleses.adoc
@@ -43,7 +43,7 @@ For {slesesa} clients, some required packages are contained on the {rhel} instal
 Ensure you follow the whole procedure before trying to register any {slesesa} client
 ====
 
-=== Add {slesesa} product from SCC
+=== Add {slesesa} Product from SCC
 
 The {slesesa} product is provided by {scc}, including the client tools.
 
