--- a/modules/client-configuration/pages/clients-sleses.adoc
+++ b/modules/client-configuration/pages/clients-sleses.adoc
@@ -78,7 +78,7 @@ There are two ways to check if a channel has finished synchronizing:
 This dialog displays a completion bar for each product when they are being synchronized.
 * You can also check the synchronization log file at the command prompt.
 
-Use the [command]``cat`` or [command]``tail -f`` command to view the [path]``/var/log/rhn/reposync/channel-label.log`` file.
+Use the [command]``tail -f`` command to view the [path]``/var/log/rhn/reposync/channel-label.log`` file.
 
 If you use this method, remember that base channels can contain multiple child channels.
 
