--- a/modules/client-configuration/pages/clients-sleses.adoc
+++ b/modules/client-configuration/pages/clients-sleses.adoc
@@ -109,7 +109,7 @@ All packages on the media will be mirrored into a child channel located under th
 The base parent channel will not contain any packages.
 . Modify the associated activation key to include your new child channel.
 . At the command prompt, as root, copy your installation disk image to the [path]``/tmp`` directory.
-. Create a directory to contain the media content (you can replace [path]``/rhel`` with [path]``/centos`` if you are using {centos}
+. Create a directory to contain the media content (you can replace [path]``/rhel`` with [path]``/centos`` if you are using {centos}.
 +
 ----
 mkdir -p /srv/www/htdocs/pub/rhel
