Added admon about most recent docs

--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -21,6 +21,12 @@ ifeval::[{suma-content} == true]
 
 The following documentation is available for {productname} version {productnumber}.
 
+[IMPORTANT]
+====
+{productnamee} documentation is available in several locations and formats.
+For the most up-to-date version of this documentation, check https://opensource.suse.com/doc-susemanager first.
+====
+
 Download All PDFs icon:caret-right[] icon:file-archive[link="../susemanager-docs_en-pdf.tar.gz"]
 
 
@@ -65,7 +71,3 @@ Download All PDFs icon:caret-right[] icon:file-archive[link="../uyuni-docs_en-pd
 //| Architecture               | xref:architecture:architecture-intro.adoc[HTML] link:../pdf/suse_manager_architecture.pdf[PDF]
 |===
 endif::[]
-
-
-
-
