--- a/modules/retail/pages/retail-network-arch.adoc
+++ b/modules/retail/pages/retail-network-arch.adoc
@@ -16,7 +16,19 @@ We recommend you have a fast network connection between the branch server and it
 Branch servers provide services for PXE boot, and act as an image cache, Salt broker, and proxy for software components (RPM packages).
 The branch server can also manage local networking, and provide DHCP and DNS services.
 
-The branch server can operate in several different network configurations:
+{smr} Branch servers are implemented as enhanced {susemgr} Proxy servers.
+For technical background information on {smr} Branch servers, see also the documentation on {susemgr} Proxy servers (xref:installation/install-proxy-unified.adoc[]).
+
+
+
+== Branch Server Network Configuration
+
+The branch server can operate in several different network configurations.
+The two most common configurations are a dedicated network, or a shared network.
+
+
+
+=== Dedicated Network Architecture
 
 The branch server has a dedicated network interface card and terminals use an isolated internal branch network.
 In this configuration, the branch server manages the internal network and provides DHCP, DNS, PXE, FTP, and TFTP services.
@@ -24,11 +36,10 @@ In this configuration, the branch server manages the internal network and provid
 image::retail_dedicated_nic.png[scaledwidth=80%]
 
 
+
+=== Shared Network Architecture
+
 The branch server shares a network with the terminals, and provides a connection to the {susemgr} server.
 In this configuration, the branch server is not required to manage a network (DHCP and DNS services), but acts as a PXE boot server and provides FTP and TFTP services.
 
 image::retail_shared_network.png[scaledwidth=80%]
-
-
-{smr} Branch servers are implemented as enhanced {susemgr} Proxy servers.
-For technical background information on {smr} Branch servers, see also the documentation on {susemgr} Proxy servers (xref:installation/install-proxy-unified.adoc[]).
