edits per feedback

--- a/modules/administration/pages/tshoot-osadjabberd.adoc
+++ b/modules/administration/pages/tshoot-osadjabberd.adoc
@@ -44,16 +44,16 @@ You can increase the number of files available to jabber by editing the [systemi
 ----
 [Unit]
 LimitNOFILE=
-LimitNOFILE=<newvalue>
+LimitNOFILE=<soft_limit>:<hard_limit>
 ----
 +
 The value you choose will vary depending on your environment.
-For example, if you have 5000 clients, increase the value to 6000:
+For example, if you have 5000 clients, increase the soft value by 100 to 5100, and the hard value by 1000 to 6000:
 +
 ----
 [Unit]
 LimitNOFILE=
-LimitNOFILE=6000
+LimitNOFILE=5100:6000
 ----
 
 
